--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
             android:name=".HistoryActivity"
             android:exported="false" />
         <activity
+            android:name=".HistoryDescriptionActivity"
+            android:exported="false" />
+        <activity
             android:name=".SkinSelector"
             android:exported="false" />
         <activity
