--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DM2_JUEGODELAJEDREZ"
-        tools:targetApi="31">
+        android:minSdkVersion="30"
+        tools:targetApi="30">
         <activity
             android:name=".ui.SettingsActivity"
             android:exported="false" />
